# eeg_modules

./: .gitignore  LICENCE  README.md  README.rst  bids_conversion.py  console_menu.py  eeg_modules.py  eprime_conversion.py  preprocess_eeg.py  processing_functions.py  pyproject.toml  setup.py  usefull_functions.py
Sam54000_eeg_modules/: __init__.py  bids_conversion.py  preprocess_eeg.py
docs/: Installation.rst.in  Usage.rst.in  conf.py  index.rst
docs/source/: APIs.rst  Convertor.rst  Introduction.rst  Sam54000_eeg_modules.rst  api.rst  bids_conversion.rst  conf.py  eeg_modules.rst  eprime_conversion.rst  index.rst  modules.rst  preprocess_eeg.rst  processing_functions.rst  usage.rst
expe_log/: logs
python/Sam54000_eeg_modules/: cli.py  eprime_conversion.py  preprocess_eeg.py
