[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Sam54000_eeg_modules"
authors = [{name = "Samuel Louviot", email = "sam.louviot@gmail.com"}]
readme = "README.rst"
requires-python = ">=3.9"

dependencies = [
	"numpy",
    "pandas",
    "mne >= 1.4.0",
    "pyprep >= 0.4.1",
    "mne_bids >= 0.13",
    "simple-term-menu"
]

classifiers = [
    "Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://sam54000-modules.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/Sam54000/eeg_modules"

[project.scripts]
bids_conversion = "Sam54000_eeg_modules.bids_conversion:main"
